2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies as well as
	(early|late|last)-packages; prefer them to configure-package-path.

2006-12-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el: Changes to create a new session after submitting
	form.
	(w3m-form-new-session): New variable.
	(w3m-fontify-textareas, w3m-form-parse-and-fontify): Combine the
	above variable into expressions which represent form actions.
	(w3m-form-submit): Accept and optional argument `new-session'.

	* w3m.el: Changes to create a new session after submitting form.
	(w3m-submit-form): Accept and optional argument `new-session'.
	`w3m-form-new-session' is binded locally.
	(w3m-view-this-url): `w3m-form-new-session' is binded locally.

2006-12-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Add prefix argument `TOP'. If TOP
	is non-nil, visit the top of this site."
	(w3m-parent-page-available-p): Fix regexp.

2006-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* patches/README: Update.
	* patches/italic-text.patch: New file.
	* patches/dot-domain.patch: New file.
	* patches/file-progress.patch: Renew.
	* patches/w3m-0.2.1-inu-1.5-solaris-xemacs.patch: Remove.
	* patches/no-proxy.patch: Remove.

2006-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-italic-face): New face.
	(w3m-fontify-italic): New function.
	(w3m-fontify): Use it.

2006-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-clear-contents): Break long lines.

2006-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el: Rewrite.

	* shimbun/nnshimbun.el (nnshimbun-close-server): Save NOV for only
	existing groups.
	(nnshimbun-nov-buffer-name, nnshimbun-nov-directory)
	(nnshimbun-nov-file-name): Move forward.

2006-11-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (w3m-mail-compose-with-mew): Refrain handling of
	`current-prefix-arg'.
