@@ -1,3 +1,7 @@
+2006-12-13  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* w3m-search.el (w3m-search-engine-alist): Fix amazon entry.
+
 2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Check for
